add single label benchmark

--- a/notebook/Untitled.ipynb
+++ b/notebook/Untitled.ipynb
@@ -25,9 +25,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Load training data\n"
+     "output_type": "stream",
+     "text": [
+      "Load training data\n"
+     ]
     }
    ],
    "source": [
@@ -70,13 +72,117 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "             fridge  washingmachine    dishwasher        kettle     microwave\ncount  1.583397e+06    1.583397e+06  1.583397e+06  1.583397e+06  1.583397e+06\nmean   4.034609e+01    4.054419e+01  2.297803e+01  1.923658e+01  1.262959e+01\nstd    5.338638e+01    2.473060e+02  2.185563e+02  2.059316e+02  1.319137e+02\nmin    0.000000e+00    0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00\n25%    0.000000e+00    0.000000e+00  1.000000e+00  1.000000e+00  1.000000e+00\n50%    0.000000e+00    0.000000e+00  1.000000e+00  1.000000e+00  1.000000e+00\n75%    8.800000e+01    0.000000e+00  1.000000e+00  1.000000e+00  1.000000e+00\nmax    1.856000e+03    3.956000e+03  3.057000e+03  3.629000e+03  3.180000e+03",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>fridge</th>\n      <th>washingmachine</th>\n      <th>dishwasher</th>\n      <th>kettle</th>\n      <th>microwave</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>1.583397e+06</td>\n      <td>1.583397e+06</td>\n      <td>1.583397e+06</td>\n      <td>1.583397e+06</td>\n      <td>1.583397e+06</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>4.034609e+01</td>\n      <td>4.054419e+01</td>\n      <td>2.297803e+01</td>\n      <td>1.923658e+01</td>\n      <td>1.262959e+01</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>5.338638e+01</td>\n      <td>2.473060e+02</td>\n      <td>2.185563e+02</td>\n      <td>2.059316e+02</td>\n      <td>1.319137e+02</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.000000e+00</td>\n      <td>0.000000e+00</td>\n      <td>0.000000e+00</td>\n      <td>0.000000e+00</td>\n      <td>0.000000e+00</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>0.000000e+00</td>\n      <td>0.000000e+00</td>\n      <td>1.000000e+00</td>\n      <td>1.000000e+00</td>\n      <td>1.000000e+00</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>0.000000e+00</td>\n      <td>0.000000e+00</td>\n      <td>1.000000e+00</td>\n      <td>1.000000e+00</td>\n      <td>1.000000e+00</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>8.800000e+01</td>\n      <td>0.000000e+00</td>\n      <td>1.000000e+00</td>\n      <td>1.000000e+00</td>\n      <td>1.000000e+00</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>1.856000e+03</td>\n      <td>3.956000e+03</td>\n      <td>3.057000e+03</td>\n      <td>3.629000e+03</td>\n      <td>3.180000e+03</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fridge</th>\n",
+       "      <th>washingmachine</th>\n",
+       "      <th>dishwasher</th>\n",
+       "      <th>kettle</th>\n",
+       "      <th>microwave</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1.583397e+06</td>\n",
+       "      <td>1.583397e+06</td>\n",
+       "      <td>1.583397e+06</td>\n",
+       "      <td>1.583397e+06</td>\n",
+       "      <td>1.583397e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>4.034609e+01</td>\n",
+       "      <td>4.054419e+01</td>\n",
+       "      <td>2.297803e+01</td>\n",
+       "      <td>1.923658e+01</td>\n",
+       "      <td>1.262959e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>5.338638e+01</td>\n",
+       "      <td>2.473060e+02</td>\n",
+       "      <td>2.185563e+02</td>\n",
+       "      <td>2.059316e+02</td>\n",
+       "      <td>1.319137e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>8.800000e+01</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.856000e+03</td>\n",
+       "      <td>3.956000e+03</td>\n",
+       "      <td>3.057000e+03</td>\n",
+       "      <td>3.629000e+03</td>\n",
+       "      <td>3.180000e+03</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             fridge  washingmachine    dishwasher        kettle     microwave\n",
+       "count  1.583397e+06    1.583397e+06  1.583397e+06  1.583397e+06  1.583397e+06\n",
+       "mean   4.034609e+01    4.054419e+01  2.297803e+01  1.923658e+01  1.262959e+01\n",
+       "std    5.338638e+01    2.473060e+02  2.185563e+02  2.059316e+02  1.319137e+02\n",
+       "min    0.000000e+00    0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00\n",
+       "25%    0.000000e+00    0.000000e+00  1.000000e+00  1.000000e+00  1.000000e+00\n",
+       "50%    0.000000e+00    0.000000e+00  1.000000e+00  1.000000e+00  1.000000e+00\n",
+       "75%    8.800000e+01    0.000000e+00  1.000000e+00  1.000000e+00  1.000000e+00\n",
+       "max    1.856000e+03    3.956000e+03  3.057000e+03  3.629000e+03  3.180000e+03"
+      ]
      },
+     "execution_count": 20,
      "metadata": {},
-     "execution_count": 20
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -391,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
+   "version": "3.6.11"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
