--- a/notebook/model.ipynb
+++ b/notebook/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,79 +13,27 @@
     "import numpy as np\n",
     "from net.modules import *\n",
     "from data.load_data import *\n",
-    "from data.data_loader import load_data , spilit_refit_test, Seq2PointDataset\n",
+    "from data.data_loader import load_data , spilit_refit_test, Seq2PointDataset,Dataset\n",
     "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "CNN1DModel(\n",
-       "  (enc_net): Encoder(\n",
-       "    (conv_stack): Sequential(\n",
-       "      (0): Conv1D(\n",
-       "        (conv): Conv1d(1, 8, kernel_size=(3,), stride=(2,), padding=(1,))\n",
-       "        (net): Sequential(\n",
-       "          (0): Conv1d(1, 8, kernel_size=(3,), stride=(2,), padding=(1,))\n",
-       "          (1): BatchNorm1d(8, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "          (2): PReLU(num_parameters=1)\n",
-       "        )\n",
-       "      )\n",
-       "      (1): Conv1D(\n",
-       "        (conv): Conv1d(8, 16, kernel_size=(3,), stride=(2,), padding=(1,))\n",
-       "        (net): Sequential(\n",
-       "          (0): Conv1d(8, 16, kernel_size=(3,), stride=(2,), padding=(1,))\n",
-       "          (1): BatchNorm1d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "          (2): PReLU(num_parameters=1)\n",
-       "        )\n",
-       "      )\n",
-       "      (2): Conv1D(\n",
-       "        (conv): Conv1d(16, 32, kernel_size=(3,), stride=(2,), padding=(1,))\n",
-       "        (net): Sequential(\n",
-       "          (0): Conv1d(16, 32, kernel_size=(3,), stride=(2,), padding=(1,))\n",
-       "          (1): BatchNorm1d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "          (2): PReLU(num_parameters=1)\n",
-       "        )\n",
-       "      )\n",
-       "      (3): Conv1D(\n",
-       "        (conv): Conv1d(32, 64, kernel_size=(3,), stride=(2,), padding=(1,))\n",
-       "        (net): Sequential(\n",
-       "          (0): Conv1d(32, 64, kernel_size=(3,), stride=(2,), padding=(1,))\n",
-       "          (1): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "          (2): PReLU(num_parameters=1)\n",
-       "        )\n",
-       "      )\n",
-       "      (4): Conv1D(\n",
-       "        (conv): Conv1d(64, 128, kernel_size=(3,), stride=(2,), padding=(1,))\n",
-       "        (net): Conv1d(64, 128, kernel_size=(3,), stride=(2,), padding=(1,))\n",
-       "      )\n",
-       "    )\n",
-       "  )\n",
-       "  (mlp_layer): MLPLayer(\n",
-       "    (mlp_network): Sequential(\n",
-       "      (0): Linear(in_features=2048, out_features=1024, bias=True)\n",
-       "      (1): PReLU(num_parameters=1)\n",
-       "    )\n",
-       "  )\n",
-       "  (dropout): Dropout(p=0.01, inplace=False)\n",
-       "  (fc_out_state): Linear(in_features=1024, out_features=2, bias=True)\n",
-       "  (fc_out_power): Linear(in_features=1024, out_features=3, bias=True)\n",
-       ")"
-      ]
+      "text/plain": "CNN1DModel(\n  (enc_net): Encoder(\n    (conv_stack): Sequential(\n      (0): Conv1D(\n        (conv): Conv1d(1, 8, kernel_size=(3,), stride=(2,), padding=(1,))\n        (net): Sequential(\n          (0): Conv1d(1, 8, kernel_size=(3,), stride=(2,), padding=(1,))\n          (1): BatchNorm1d(8, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n          (2): PReLU(num_parameters=1)\n        )\n      )\n      (1): Conv1D(\n        (conv): Conv1d(8, 16, kernel_size=(3,), stride=(2,), padding=(1,))\n        (net): Sequential(\n          (0): Conv1d(8, 16, kernel_size=(3,), stride=(2,), padding=(1,))\n          (1): BatchNorm1d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n          (2): PReLU(num_parameters=1)\n        )\n      )\n      (2): Conv1D(\n        (conv): Conv1d(16, 32, kernel_size=(3,), stride=(2,), padding=(1,))\n        (net): Sequential(\n          (0): Conv1d(16, 32, kernel_size=(3,), stride=(2,), padding=(1,))\n          (1): BatchNorm1d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n          (2): PReLU(num_parameters=1)\n        )\n      )\n      (3): Conv1D(\n        (conv): Conv1d(32, 64, kernel_size=(3,), stride=(2,), padding=(1,))\n        (net): Sequential(\n          (0): Conv1d(32, 64, kernel_size=(3,), stride=(2,), padding=(1,))\n          (1): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n          (2): PReLU(num_parameters=1)\n        )\n      )\n      (4): Conv1D(\n        (conv): Conv1d(64, 128, kernel_size=(3,), stride=(2,), padding=(1,))\n        (net): Conv1d(64, 128, kernel_size=(3,), stride=(2,), padding=(1,))\n      )\n    )\n  )\n  (mlp_layer): MLPLayer(\n    (mlp_network): Sequential(\n      (0): Linear(in_features=2048, out_features=1024, bias=True)\n      (1): PReLU(num_parameters=1)\n    )\n  )\n  (dropout): Dropout(p=0.01, inplace=False)\n  (fc_out_state): Linear(in_features=1024, out_features=10, bias=True)\n  (fc_out_power): Linear(in_features=1024, out_features=15, bias=True)\n)"
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 23
     }
    ],
    "source": [
     "model = CNN1DModel(in_size=1, \n",
-    "                               output_size=1,\n",
+    "                               output_size=5,\n",
     "                               d_model=128,\n",
     "                               seq_len=99,  \n",
     "                               n_layers=5, \n",
@@ -96,15 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Load training data\n"
-     ]
+     "name": "stdout",
+     "text": "Load training data\n"
     }
    ],
    "source": [
@@ -113,23 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = Seq2PointDataset(x, y[:,0], z[:,0])"
+    "data = Dataset(x, y, z)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,18 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "torch.Size([99, 1])"
-      ]
+      "text/plain": "torch.Size([100, 1])"
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 15
     }
    ],
    "source": [
@@ -158,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,36 +108,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p,t,s=next(iter(load))"
+    "p, t, s = next(iter(load))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "torch.Size([16])"
-      ]
+      "text/plain": "torch.Size([16, 5])"
      },
-     "execution_count": 10,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 21
     }
    ],
    "source": [
-    "s.shape"
+    "t.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,22 +144,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "torch.Size([16, 3, 1])"
-      ]
+      "text/plain": "torch.Size([16, 3, 5])"
      },
-     "execution_count": 16,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 25
     }
    ],
    "source": [
     "c.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.metrics import f1_score, mean_absolute_error, mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([72.73291   ,  0.99868774, 56.405422  , 21.221878  , 73.38761   ],\n      dtype=float32)"
+     },
+     "metadata": {},
+     "execution_count": 43
+    }
+   ],
+   "source": [
+    "  \n",
+    "y_p, y_t = c[:,0,:].data.numpy(), t.data.numpy()\n",
+    "\n",
+    "get_nde(y_t, y_p)"
    ]
   },
   {
@@ -249,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.3-final"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
